--- a/index.html
+++ b/index.html
@@ -1725,13 +1725,22 @@
         <!-- Header -->
         <h1 class="header section-title">RESOURCES AND FURTHER DISCOVERY</h1>
 
+        <p>Main article:</p>
         <ul class="resoures-list">
-          <li>History of the Archdiocese of Boston http://www.bostoncatholic.org/About-The-BeArchdiocese/Content.aspx?id=11570</li>
-          <li>Lord, Robert H. et al. History of the Archdiocese of Boston in the Various Stages of Its Development, 1604 to 1943.</li>
-          <li>One hundred years of progress: a graphic, historical, and pictorial account of the Catholic Church of New England, Archdiocese of Boston.</li>
-          <li>St. Patrick Church History http://www.allsaintsmaine.com/st-patrick-history/</li>
-          <li>Truxes, Thomas M. Irish-American Trade, 1660-1783</li>
-          <li>United States Catholic Historical Society. Historical Records and Studies, Volume 17.</li>
+        <li><a href=”images/Catholic_Records_Language_Guide.pdf”>Guide to Language and Terminology in Catholic Records</a> (PDF)</li>
+        <li>Archdiocese of Boston, <em>One hundred years of progress: a graphic, historical, and pictorial account of the Catholic Church of New England</em>, 1895.
+        <li>Lord, Robert H. <em>History of the Archdiocese of Boston in the Various Stages of Its Development, 1604 to 1943</em>, 1944.</li>
+        <li>Truxes, Thomas M. <em>Irish-American Trade, 1660-1783</em>, 2004.</li>
+        <li>United States Catholic Historical Society, <em>Historical Records and Studies, Volume 17</em>, 1926.
+        <li>“<a href=”http://www.bostoncatholic.org/About-The-Archdiocese/Default.aspx” target=”new”>History of the Archdiocese of Boston</a>,” BostonCatholic.org.</li>
+        <li>“<a href=”http://www.allsaintsmaine.com/st-patrick-history/” target=”new”>St. Patrick Church History</a>,” AllSaintsMaine.com.</li>
+        </ul>
+        
+        <p>Convent riots:</p>
+        <ul class="resoures-list">
+        <li>Prioli, Carmine A. <em>American Heritage Magazine</em>, “<a href=”http://www.americanheritage.com/content/ursuline-outrage?nid=54425” target=”new”>The Ursuline Outrage</a>,” 1982.</li>
+        <li>Tager, Jack. <em>Boston Riots: Three Centuries of Social Violence</em>, 2000.</li>
+        <li>”<a href=”http://www.newenglandhistoricalsociety.com/know-nothing-party-takes-root-in-ashes-of-destroyed-charlestown-convent/” target=”new”>Anti-Irish Know-Nothing Mob Burns a Charlestown Convent in 1834</a>,” NewEnglandHistoricalSociety.com.</li>
         </ul>
 
       </div>
