Removed show More button on image articles

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </p>
         <div class="floated-box f-left">
           <img src="images/project-saint-icon.jpg" alt="Resources and Further Discovery"/>
-          <span class="image-caption-content t-center">Ready to start browsing?<a href="https://www.americanancestors.org/databases/massachusetts-image-only-roman-catholic-archdiocese-of-boston-records-1789-1900/image/?volumeId=42946">Search the database at AmericanAncestors.org</a>.</span>
+          <span class="image-caption-content t-center">Ready to start browsing?<br/> Search the database at <a href="https://www.americanancestors.org/databases/massachusetts-image-only-roman-catholic-archdiocese-of-boston-records-1789-1900/image/?volumeId=42946">AmericanAncestors.org</a>.</span>
         </div>
         <p>
           Carroll was only too happy to give Cheverus a mission:  minister to the people, unite the scattered faithful and help the church in Boston take root.
