Change favicon title and St. Bridget caption

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>Archdiocese</title>
+    <title>Historic Catholic Records Online</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <!--Favicon -->
@@ -141,7 +141,7 @@
         <h1 class="header section-title">Humble Beginnings</h1>
         <!-- Header Text -->
         <p class="text-bold t-center">
-          In the summer of 1797, an earnest young French priest named Jean-Louis Lefebvre de Cheverus arrived in Boston, eager to help American Catholics any way he could. He wrote to John Carroll, Bishop of the New England Church, requesting to be sent where he "was most needed, without making yourself anxious about the means of my support. I am willing to work with my hands, if need be."
+          In the summer of 1797, an earnest young French priest named Jean-Louis Lefebvre de Cheverus arrived in Boston, determined to help American Catholics any way he could. He wrote to John Carroll, Bishop of the New England Church, requesting to be sent where he "was most needed, without making yourself anxious about the means of my support. I am willing to work with my hands, if need be."
         </p>
         <div class="floated-box f-left">
           <a href="#" data-toggle="modal" data-target="#introduction-section-floated-bx-modal1">
@@ -162,7 +162,9 @@
                   <span class="floated-box-img large-img">
                     <img src="images/project-saint-icon.jpg" alt="Resources and Further Discovery"/>
                   </span>
-                  <span class="image-caption-content t-center">Ready to start browsing? <a href="https://www.americanancestors.org/databases/massachusetts-image-only-roman-catholic-archdiocese-of-boston-records-1789-1900/image/?volumeId=42946">Search the database at AmericanAncestors.org</a>.</span>
+                  <span class="image-caption-content t-center"><i>Saint Bridget of Ireland</i><br />
+                    
+                    NEHGS and the Archdiocese of Boston are partnering to make Catholic records available online. <a href="https://www.americanancestors.org/databases/massachusetts-image-only-roman-catholic-archdiocese-of-boston-records-1789-1900/image/?volumeId=42946">Browse parish records</a>.</span>
                 </div>
               </div>
 
