change to bridget caption

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             </div>
           </div>
           <!-- END Modal -->
-          <span class="image-caption-content t-center"><i>Saint Bridget of Ireland</i><br />NEHGS and the Archdiocese of Boston are partnering to make Catholic records available online.<a href="https://www.americanancestors.org/databases/massachusetts-image-only-roman-catholic-archdiocese-of-boston-records-1789-1900/image/?volumeId=42946">Browse parish records</a>.</span>
+          <span class="image-caption-content t-center"><p><i>Saint Bridget of Ireland</i></p>NEHGS and the Archdiocese of Boston are partnering to make Catholic records available online.<br /><a href="https://www.americanancestors.org/databases/massachusetts-image-only-roman-catholic-archdiocese-of-boston-records-1789-1900/image/?volumeId=42946">Browse parish records</a>.</span>
         </div>
         <p>
           Carroll was only too happy to give Cheverus a mission:  minister to the people, unite the scattered faithful and help the church in Boston take root.
