Reset carousel to beginning on modal show

--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      <h5 class="modal-title">Image Slideshow</h5>
+                      <h5 class="modal-title">From Old Books to Browsable Images</h5>
                     </div>
                     <div class="modal-body">
                       <div id="myCarousel" class="carousel slide">
