Change captions and carousel images

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                   <span class="floated-box-img large-img">
                     <img src="images/project-saint-icon.jpg" alt="Resources and Further Discovery"/>
                   </span>
-                  <span class="image-caption-content t-center"><i>Saint Bridget of Ireland</i><br />
+                  <span class="image-caption-content t-center"><i>Saint Brigid of Ireland</i><br />
                     
                     NEHGS and the Archdiocese of Boston are partnering to make Catholic records available online. <a href="https://www.americanancestors.org/databases/massachusetts-image-only-roman-catholic-archdiocese-of-boston-records-1789-1900/image/?volumeId=42946">Browse parish records</a>.</span>
                 </div>
@@ -171,7 +171,7 @@
             </div>
           </div>
           <!-- END Modal -->
-          <span class="image-caption-content t-center"><p><i>Saint Bridget of Ireland</i></p>NEHGS and the Archdiocese of Boston are partnering to make Catholic records available online.<br /><a href="https://www.americanancestors.org/databases/massachusetts-image-only-roman-catholic-archdiocese-of-boston-records-1789-1900/image/?volumeId=42946">Browse parish records</a>.</span>
+          <span class="image-caption-content t-center"><p><i>Saint Brigid of Ireland</i></p>NEHGS and the Archdiocese of Boston are partnering to make Catholic records available online.<br /><a href="https://www.americanancestors.org/databases/massachusetts-image-only-roman-catholic-archdiocese-of-boston-records-1789-1900/image/?volumeId=42946">Browse parish records</a>.</span>
         </div>
         <p>
           Carroll was only too happy to give Cheverus a mission:  minister to the people, unite the scattered faithful and help the church in Boston take root.
@@ -563,8 +563,8 @@
                           <div class="item active">
                             <img src="images/slider-images/volumeslideshow1.jpg" alt="Books">
                               <div class="carousel-caption">
-                                <h4>From the archives</h4>
-                                <p>The Archdiocese of Boston delivers the volumes of parish records from their archives to NEHGS offices.</p>
+                                <h4>From the Archdiocese&rsquo;s archives to NEHGS</h4>
+                                <p>The Archdiocese of Boston delivers the volumes of parish records from their archives to NEHGS offices, where NEHGS staff will be scanning and indexing volumes of parish records from 1797 to 1900.</p>
                               </div>
                           </div>
 
@@ -579,7 +579,7 @@
                           <div class="item">
                             <img src="images/slider-images/volumeslideshow3.jpg" alt="Reviewing Volumes">
                               <div class="carousel-caption">
-                                <h4>Examination</h4>
+                                <h4>Evaluating the state of the volumes</h4>
                                 <p>Our experts examine the volumes to determine whether they’re in condition to be scanned. </p>
                               </div>
                           </div>
@@ -595,7 +595,7 @@
                           <div class="item">
                             <img src="images/slider-images/volumeslideshow5.jpg" alt="Book Doctoring">
                               <div class="carousel-caption">
-                                <h4>Book doctoring</h4>
+                                <h4>Book doctor</h4>
                                 <p>Volunteer and professional book conservator Stuart Walker removes the thread from a binding, freeing the leaves of the volume.</p>
                               </div>
                           </div>
@@ -638,7 +638,7 @@
                               <div class="item">
                             <img src="images/slider-images/volumeslideshow10.jpg" alt="Lowell Bott Mill">
                               <div class="carousel-caption">
-                                <h4>Lowell Bott Mill</h4>
+                                <h4>Straighten it out</h4>
                                 <p>After each page is scanned, volunteers use software to straighten and crop the images.</p>
                               </div>
                           </div>
@@ -648,8 +648,8 @@
                               <div class="item">
                             <img src="images/slider-images/volumeslideshow11.jpg" alt="Lowell Bott Mill">
                               <div class="carousel-caption">
-                                <h4>Lowell Bott Mill</h4>
-                                <p>Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.</p>
+                                <h4>Browseable records</h4>
+                                <p>Images are uploaded to our website, and our members can begin browsing parish data.</p>
                               </div>
                           </div>
 
