Minor text edits to intro

--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
           Carroll was only too happy to give Cheverus a mission:  minister to the people, unite the scattered faithful and help the church in Boston take root.
         </p>
         <p>
-          Though only 28, Cheverus had already demonstrated deep conviction to his religion at great personal sacrifice. Amid the bloody turmoil of the French Revolution, he refused to pledge his loyalty to the government. This resistance cost him his parish and endangered his life, and he fled to London in disguise.
+          Though just 28, Cheverus had already demonstrated deep conviction to his religion at great personal sacrifice. Amid the bloody turmoil of the French Revolution, he refused to pledge his loyalty to the government. This resistance cost him his parish and endangered his life, and he fled to London in disguise.
         </p>
         <p>
-          While in England, Cheverus received a letter from his former professor Francis Matignon, now a Boston pastor, who vividly described the town's desperate need for Catholic benevolence.  If only you were here, lamented Matignon, you could do so much good work.
+          While in England, Cheverus received a letter from his former professor Francis Matignon, now a Boston pastor, who described the town's desperate need for Catholic benevolence.  If only you were here, lamented Matignon, you could do so much good work.
         </p>
         <div class="floated-box f-right">
           <a href="#" data-toggle="modal" data-target="#introduction-section-floated-bx-modal2">
@@ -214,7 +214,7 @@
           Boston would present a new set of obstacles for Cheverus. Practicing Catholicism had only been legal in Massachusetts for 17 years, and many members of the majority-Protestant population were deeply suspicious of their "Popish" neighbors.
         </p>
         <p>
-          It would be another year before the construction of the first Holy Cross Church, later Cathedral, and another nine before The Archdiocese of Boston would establish itself there. The immigration boom which would see French-Canadians, Irish, Germans, Lithuanians, Italians and many other ethnic groups pour into New England was still nearly half a century away.
+          It would be another year before the construction of the first Holy Cross Church (later renamed Cathedral), and another nine before The Archdiocese of Boston would establish itself there. The immigration boom which would see French-Canadians, Irish, Germans, Lithuanians, Italians and many other ethnic groups pour into New England was still nearly half a century away.
         </p>
         <p>
           As Matignon had informed Cheverus, priests were sorely needed to minister to their communities and perform the seven holy rites, called sacraments, that mark the passages of a Catholic's life, from baptism after birth to the annointing of the sick during illness or before death.
