text change to "Cathedral"

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
           Boston would present a new set of obstacles for Cheverus. Practicing Catholicism had only been legal in Massachusetts for 17 years, and many members of the majority-Protestant population were deeply suspicious of their "Popish" neighbors.
         </p>
         <p>
-          It would be another year before the construction of the first Holy Cross Church (later renamed Cathedral), and another nine before The Archdiocese of Boston would establish itself there. The immigration boom which would see French-Canadians, Irish, Germans, Lithuanians, Italians and many other ethnic groups pour into New England was still nearly half a century away.
+          It would be another year before the construction of the first Holy Cross Church (later designated as Boston's Cathedral), and another nine before The Archdiocese of Boston would establish itself there. The immigration boom which would see French-Canadians, Irish, Germans, Lithuanians, Italians and many other ethnic groups pour into New England was still nearly half a century away.
         </p>
         <p>
           As Matignon had informed Cheverus, priests were sorely needed to minister to their communities and perform the seven holy rites, called sacraments, that mark the passages of a Catholic's life, from baptism after birth to the annointing of the sick during illness or before death.
