--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
               <!-- Home Texts -->
               <span class="rotate">
-                <b>ARTICLES <br/> OF FAITH</b>
+                <b>A LEGACY <br/> OF FAITH</b>
               </span>
               <!-- End Home Texts -->
 
@@ -116,7 +116,7 @@
             <!-- End Home Text Slider -->
 
             <!-- Home Fixed Text -->
-            <p class="home-fixed-text white thin">THE HISTORIC LEGACY OF<br/>BOSTON'S CATHOLIC COMMUNITY</p>
+            <p class="home-fixed-text white thin">The historical significance of <br/> Massachusetts's Catholic parish records</p>
             <a href="#introduction" class="scroll-down-arrow" title ="Introduction" name="introduction"><div class="arrow bounce"></div></a>
 
           </div>
@@ -214,7 +214,7 @@
           Boston would present a new set of obstacles for Cheverus. Practicing Catholicism had only been legal in Massachusetts for 17 years, and many members of the majority-Protestant population were deeply suspicious of their "Popish" neighbors.
         </p>
         <p>
-          It would be another year before the construction of the first Holy Cross Church (later designated as Boston's Cathedral), and another nine before The Archdiocese of Boston would establish itself there. The immigration boom which would see French-Canadians, Irish, Germans, Lithuanians, Italians and many other ethnic groups pour into New England was still nearly half a century away.
+          It would be another year before the construction of the first Holy Cross Church (later designated as Boston's Cathedral), and another nine before the Archdiocese of Boston would establish itself there. The immigration boom which would see French-Canadians, Irish, Germans, Lithuanians, Italians and many other ethnic groups pour into New England was still nearly half a century away.
         </p>
         <p>
           As Matignon had informed Cheverus, priests were sorely needed to minister to their communities and perform the seven holy rites, called sacraments, that mark the passages of a Catholic's life, from baptism after birth to the annointing of the sick during illness or before death.
