Make Jean Maguire's text changes

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
         <!--End Image Gallery-->
         
         <p>
-          Today, these detailed documents are a critical resource for researchers, historians and genealogists, especially for moments when secular records are spotty or lost. They record important moments in the lives of the individuals, families, and communities who transformed the Catholic Church from a minor presence in the Protestant town to the defining religion of a major American city.
+          Today, these detailed documents are a critical resource for researchers, historians, and genealogists, especially for moments when secular records are spotty or lost. They record important moments in the lives of the individuals, families, and communities who transformed the Catholic Church from a minor presence in the Protestant town to the defining religion of a major American city.
         </p>
         <p>
           The story of how Massachusetts's early Catholic Church flourished illustrates how America grew, as new groups arrived and clashed with earlier settlers, disparate communities found common ground, and ancient traditions were absorbed and transformed into new cultures.
@@ -528,9 +528,9 @@
         <!--Slideshow Area-->
 
         <div id="slideshow-block" class="content-popup row volume-database">
-          <h3 class="t-center uppercase">From Old Books to Browsable Images</h3>
+          <h3 class="t-center uppercase">From Paper to Pixels</h3>
           <div class="col-lg-6 col-sm-6 col-md-6 slideshow-block-content">
-            <p>The Archdiocese of Boston and NEHGS are in a partnership to create searchable databases out of records from over 100 parishes dating between 1789 and 1900. The project will take several years to complete, but while our transcribers work to make that possible, the scanned images of these volumes are available now in a browseable format for members and guests alike.</p>
+            <p>The Archdiocese of Boston and NEHGS are in a partnership to create searchable databases out of records from over 100 parishes dating between 1789 and 1900. The project will take several years to complete, but while our transcribers work to make that possible, the scanned images of these volumes are available now in a browsable format for members and guests alike.</p>
             <p>Due to the large number of records in this collection, researchers will have the most luck finding records of interest if they know the parish, rough years, and type of sacramental record for which they are searching. </p>
           </div>
 
@@ -554,7 +554,7 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      <h5 class="modal-title">From Old Books to Browsable Images</h5>
+                      <h5 class="modal-title">From Paper to Pixels</h5>
                     </div>
                     <div class="modal-body">
                       <div id="myCarousel" class="carousel slide">
@@ -564,7 +564,7 @@
                             <img src="images/slider-images/volumeslideshow1.jpg" alt="Books">
                               <div class="carousel-caption">
                                 <h4>From the Archdiocese&rsquo;s archives to NEHGS</h4>
-                                <p>The Archdiocese of Boston delivers the volumes of parish records from their archives to NEHGS offices, where NEHGS staff will be scanning and indexing volumes of parish records from 1797 to 1900.</p>
+                                <p>The Archdiocese of Boston delivers the volumes of parish records from their archives to NEHGS offices, where NEHGS staff and volunteers are scanning and indexing volumes of parish records from 1789 to 1900.</p>
                               </div>
                           </div>
 
@@ -572,7 +572,7 @@
                             <img src="images/slider-images/volumeslideshow2.jpg" alt="Old Volumes">
                               <div class="carousel-caption">
                                 <h4>Handle with care</h4>
-                                <p>Several of the volumes are crumbling with age, and require special handling.</p>
+                                <p>Several of the volumes are crumbling with age and require special handling.</p>
                               </div>
                           </div>
 
@@ -648,7 +648,7 @@
                               <div class="item">
                             <img src="images/slider-images/volumeslideshow11.jpg" alt="Lowell Bott Mill">
                               <div class="carousel-caption">
-                                <h4>Browseable records</h4>
+                                <h4>Browsable records</h4>
                                 <p>Images are uploaded to our website, and our members can begin browsing parish data.</p>
                               </div>
                           </div>
