Correct favicon link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <!--Favicon -->
-    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
     <!-- Page Styles -->
     <link rel="stylesheet" href="fonts/Open_Sans/stylesheet.css" />
