--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
               <!-- Home Texts -->
               <span class="rotate">
-                <b>A LEGACY <br/> OF FAITH</b>
+                <b>RELICS <br/> OF FAITH</b>
               </span>
               <!-- End Home Texts -->
 
@@ -116,7 +116,7 @@
             <!-- End Home Text Slider -->
 
             <!-- Home Fixed Text -->
-            <p class="home-fixed-text white thin">The historical significance of <br/> Massachusetts's Catholic parish records</p>
+            <p class="home-fixed-text white thin">The remarkable significance of <br/> the parish records of the Boston Archdiocese</p>
             <a href="#introduction" class="scroll-down-arrow" title ="Introduction" name="introduction"><div class="arrow bounce"></div></a>
 
           </div>
