some Molly updates

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <h1 class="header section-title">Humble Beginnings</h1>
         <!-- Header Text -->
         <p class="text-bold t-center">
-          In the summer of 1797, an earnest young French priest named Jean-Louis Lefebvre de Cheverus arrived in Boston, determined to help American Catholics any way he could. He wrote to Bishop John Carroll of Baltimore, the country's sole diocese, requesting to be sent where he "was most needed, without making yourself anxious about the means of my support. I am willing to work with my hands, if need be."
+          In the summer of 1797, an earnest young French priest named Jean-Louis Lefebvre de Cheverus arrived in Boston, eager to serve the American Catholic church any way he could. He wrote to Bishop John Carroll of Baltimore, at that time the country's sole diocese, requesting to be sent where he "was most needed, without making yourself anxious about the means of my support. I am willing to work with my hands, if need be."
         </p>
         <div class="floated-box f-left">
           <a href="#" data-toggle="modal" data-target="#introduction-section-floated-bx-modal1">
@@ -520,7 +520,7 @@
         <!--End Image Gallery-->
         
         <p>
-          Today, these detailed documents are a critical resource for researchers, historians, and genealogists, especially for periods when secular records are spotty or lost. They record important moments in the lives of the individuals, families, and communities who transformed the Catholic Church from a minor presence in the Protestant town to the defining religion of a major American city.
+          Today, these detailed documents are a critical resource for researchers, historians, and genealogists, especially when secular records are spotty or lost. They record important moments in the lives of the individuals, families, and communities who transformed the Catholic Church from a minor presence in the Protestant town to the defining religion of a major American city.
         </p>
         <p>
           The story of how Massachusetts's early Catholic Church flourished illustrates how America grew, as new groups arrived and clashed with earlier settlers, disparate communities found common ground, and ancient traditions were absorbed and transformed into new cultures.
