New Mass Bay and Cheverus image path

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="floated-box f-right">
           <a href="#" data-toggle="modal" data-target="#introduction-section-floated-bx-modal2">
             <span class="floated-box-img thumb">
-              <img src="images/article-image3.jpg" alt="Jean-Louis Anne Madelain Lefebvre de Cheverus"/>
+              <img src="images/article-image3.jpeg" alt="Jean-Louis Anne Madelain Lefebvre de Cheverus"/>
             </span>
           </a>
           <!-- Modal -->
@@ -703,7 +703,7 @@
         <div class="floated-box f-left">
           <a href="#" data-toggle="modal" data-target="#catholic-bay-floated-bx-modal1">
             <span class="floated-box-img thumb">
-              <img src="images/baycolony.gif" alt="Bay Colony"/>
+              <img src="images/MassBayColony.jpg" alt="Bay Colony"/>
             </span>
           </a>
           <!-- Modal -->
