--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
               <!-- Home Texts -->
               <span class="rotate">
-                <b>RELICS <br/> OF FAITH</b>
+                <b>ARTIFACTS <br/> OF FAITH</b>
               </span>
               <!-- End Home Texts -->
 
