Change modal refs to higher resolution versions

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 </div>
                 <div class="modal-body">
                   <span class="floated-box-img large-img">
-                    <img src="images/article-image3.jpg" alt="Jean-Louis Anne Madelain Lefebvre de Cheverus"/>
+                    <img src="images/article-image3.jpeg" alt="Jean-Louis Anne Madelain Lefebvre de Cheverus"/>
                   </span>
                   <span class="image-caption-content t-center">Jean-Louis Anne Madelain Lefebvre de Cheverus, as Bishop Cheverus. Painting by Gilbert Stuart, 1823. Museum of Fine Arts, Boston.</span>
                 </div>
@@ -717,7 +717,7 @@
                 </div>
                 <div class="modal-body">
                   <span class="floated-box-img large-img">
-                    <img src="images/baycolony.gif" alt="Bay Colony"/>
+                    <img src="images/MassBayColony.gif" alt="Bay Colony"/>
                   </span>
                   <span class="image-caption-content t-center">A map of early Massachusetts Bay and Cape Cod Bay areas.</span>
                 </div>
