Correct Mass Bay Colony ref

--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
                 </div>
                 <div class="modal-body">
                   <span class="floated-box-img large-img">
-                    <img src="images/MassBayColony.gif" alt="Bay Colony"/>
+                    <img src="images/MassBayColony.jpg" alt="Bay Colony"/>
                   </span>
                   <span class="image-caption-content t-center">A map of early Massachusetts Bay and Cape Cod Bay areas.</span>
                 </div>
