--- a/index.html
+++ b/index.html
@@ -1700,7 +1700,7 @@
                   <span class="floated-box-img large-img">
                     <img src="http://www.lib.utexas.edu/maps/historical/ireland_1808.jpg" alt="Historic Ireland"/>
                   </span>
-                  <span class="image-caption-content t-center">Irish ancestry? <a href="https://www.americanancestors.org/education/learning-resources/read/irish-guide" target="new">Learn more about Irish geneology at AmericanAncesters.org</a>.</span>
+                  <span class="image-caption-content t-center">Irish ancestry? <a href="https://www.americanancestors.org/education/learning-resources/read/irish-guide" target="new">Learn more about Irish genealogy at AmericanAncesters.org</a>.</span>
                 </div>
               </div>
 
