Add Video, Related Resources, and Credits sections

--- a/index.html
+++ b/index.html
@@ -2046,6 +2046,54 @@
     </section>
     <!-- End Legacy Section -->
 
+    <!-- Video Section -->
+    <section id="video" class="container">
+      <h1 class="header section-title">HOW TO BROWSE PARISH IMAGES</h1>
+      <div class="floated-box f-right">
+        <a href="#">
+          <span class="floated-box-img thumb">
+            <img src="" alt="">
+          </span>
+          <span class="image-caption-content t-center">A caption goes here</span>
+        </a>
+      </div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras dui nisi, congue tristique libero dignissim, tempor ultrices purus. Aliquam arcu lectus, auctor at aliquet sed, consequat eget metus. Aenean at mattis ipsum. Suspendisse ac urna aliquam, finibus leo non, blandit lacus. Morbi pulvinar orci sit amet eros rutrum eleifend. Donec dapibus finibus egestas. Aliquam malesuada nulla ut diam tincidunt, non porttitor nisi dignissim. Duis dapibus fringilla interdum. Donec suscipit, felis ac malesuada mattis, ante dolor mattis quam, non eleifend elit ex maximus sem. Maecenas molestie interdum est, a sodales ligula posuere in. Vivamus quis egestas libero, et posuere nisi. Quisque at commodo libero. Nunc aliquet erat egestas nibh luctus, quis viverra dui convallis.</p>
+      <div class="seperator"></div>
+    </section>
+    <!-- End Video -->
+  
+    <!-- Related Resources Section -->
+    <section id="relresources" class="container">
+      <h1 class="header section-title">RELATED RESOURCES</h1>
+      <div class="row">
+        <div class="col-md-3 col-xs-6">
+          <a href="#">
+              <div class="imgWrap"><img class="rel-image" src="" alt=""></div>
+            <p class="rel-caption">First thing</p>
+          </a>
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <a href="#">
+              <div class="imgWrap"><img class="rel-image" src="" alt=""></div>
+            <p class="rel-caption">Second thing</p>
+          </a>
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <a href="#">
+              <div class="imgWrap"><img class="rel-image" src="" alt=""></div>
+            <p class="rel-caption">Third thing</p>
+          </a>
+        </div> 
+        <div class="col-md-3 col-xs-6">
+          <a href="#">
+              <div class="imgWrap"><img class="rel-image" src="" alt=""></div>
+            <p class="rel-caption">Fourth thing</p>
+          </a>
+        </div>                       
+      </div>
+    <div class="seperator"></div>
+    </section>
+    <!-- End Related Resources -->
 
     <!--Resources Section-->
     <section id="resources" class="container">
@@ -2056,7 +2104,7 @@
         <!-- Header -->
         <h1 class="header section-title">RESOURCES AND FURTHER DISCOVERY</h1>
         
-        <ul class="resoures-list">
+        <ul class="resources-list">
         <li><a href="images/Catholic_Records_Language_Guide.pdf">Guide to Language and Terminology in Catholic Records</a> (PDF)</li>
         <li>Archdiocese of Boston, <em>One hundred years of progress: a graphic, historical, and pictorial account of the Catholic Church of New England</em>, 1895.
         <li>Lord, Robert H. <em>History of the Archdiocese of Boston in the Various Stages of Its Development, 1604 to 1943</em>, 1944.</li>
@@ -2082,8 +2130,23 @@
 
       </div>
       <!-- End Resources Inner -->
+      <div class="seperator"></div>
     </section>
     <!-- End Resources Section -->
+
+    <!-- Credits Section -->
+    <section id="credits" class="container">
+    <div class="inner clearfix">
+      <h1 class="header section-title">CREDITS</h1>
+
+      <ul class="resources-list">
+        <li>“Artifacts of Faith” by Abbey Schultz</li>
+        <li>“Rumors and Riots at the Charlestown Convent” and “Faith and Industry in Lowell” by Kelsey Jarboe</li>
+        <li>Special thanks to Paul Zotov, Molly Rogers, Jean Maguire, Sam Sturgis, Marie Daly, Andy Hanson-Dvoracek, Anand Sharma, Mangesh Gawade and Sheetal Parekh</li>
+        <li>Photography by Claire Vail</li>
+      </ul>
+    </div>
+    </section>
 
     <footer id="footer"></footer>
 
