--- a/index.html
+++ b/index.html
@@ -2049,13 +2049,10 @@
     <!-- Video Section -->
     <section id="video" class="container">
       <h1 class="header section-title">HOW TO BROWSE PARISH IMAGES</h1>
-      <div class="floated-box f-right">
-        <a href="#">
-          <span class="floated-box-img thumb">
-            <img src="" alt="">
-          </span>
-          <span class="image-caption-content t-center">A caption goes here</span>
-        </a>
+      <div style="width: 33%; float: right; margin-left: 10px;">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vwHfGokz8PQ" frameborder="0" allowfullscreen></iframe>
+        </div>
       </div>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras dui nisi, congue tristique libero dignissim, tempor ultrices purus. Aliquam arcu lectus, auctor at aliquet sed, consequat eget metus. Aenean at mattis ipsum. Suspendisse ac urna aliquam, finibus leo non, blandit lacus. Morbi pulvinar orci sit amet eros rutrum eleifend. Donec dapibus finibus egestas. Aliquam malesuada nulla ut diam tincidunt, non porttitor nisi dignissim. Duis dapibus fringilla interdum. Donec suscipit, felis ac malesuada mattis, ante dolor mattis quam, non eleifend elit ex maximus sem. Maecenas molestie interdum est, a sodales ligula posuere in. Vivamus quis egestas libero, et posuere nisi. Quisque at commodo libero. Nunc aliquet erat egestas nibh luctus, quis viverra dui convallis.</p>
       <div class="seperator"></div>
@@ -2158,7 +2155,7 @@
     <script type="text/javascript" src="js/greensock/TweenMax.min.js"></script>
     <script src="js/jquery.superscrollorama.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
-    <script type="text/javascript"  src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA5Cjmxs3eyJ4vMKAO4MGKrq4rCV88uqI8"></script>
+    <script type="text/javascript"  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5Cjmxs3eyJ4vMKAO4MGKrq4rCV88uqI8"></script>
 
   </body>
   <!-- Body End -->
