Never not HTTPS

--- a/index.html
+++ b/index.html
@@ -1684,7 +1684,7 @@
         <div class="floated-box f-left">
           <a href="#" data-toggle="modal" data-target="#establishment-floated-bx-modal2">
             <span class="floated-box-img thumb">
-              <img src="http://www.lib.utexas.edu/maps/historical/ireland_1808.jpg" alt="Historic Ireland"/>
+              <img src="https://www.lib.utexas.edu/maps/historical/ireland_1808.jpg" alt="Historic Ireland"/>
             </span>
           </a>
           <!-- Modal -->
