Never not HTTPS, the other reference

--- a/index.html
+++ b/index.html
@@ -1698,7 +1698,7 @@
                 </div>
                 <div class="modal-body">
                   <span class="floated-box-img large-img">
-                    <img src="http://www.lib.utexas.edu/maps/historical/ireland_1808.jpg" alt="Historic Ireland"/>
+                    <img src="https://www.lib.utexas.edu/maps/historical/ireland_1808.jpg" alt="Historic Ireland"/>
                   </span>
                   <span class="image-caption-content t-center">Irish ancestry? <a href="https://www.americanancestors.org/education/learning-resources/read/irish-guide" target="new">Learn more about Irish genealogy at AmericanAncesters.org</a>.</span>
                 </div>
