add text next to video

--- a/index.html
+++ b/index.html
@@ -2056,7 +2056,7 @@
           </div>
         </div>
         <div class="col-xs-12 col-md-8 col-md-pull-4">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras dui nisi, congue tristique libero dignissim, tempor ultrices purus. Aliquam arcu lectus, auctor at aliquet sed, consequat eget metus. Aenean at mattis ipsum. Suspendisse ac urna aliquam, finibus leo non, blandit lacus. Morbi pulvinar orci sit amet eros rutrum eleifend. Donec dapibus finibus egestas. Aliquam malesuada nulla ut diam tincidunt, non porttitor nisi dignissim. Duis dapibus fringilla interdum. Donec suscipit, felis ac malesuada mattis, ante dolor mattis quam, non eleifend elit ex maximus sem. Maecenas molestie interdum est, a sodales ligula posuere in. Vivamus quis egestas libero, et posuere nisi. Quisque at commodo libero. Nunc aliquet erat egestas nibh luctus, quis viverra dui convallis.</p>
+        <p>The Catholic Archdiocese of Boston and NEHGS have partnered to create a searchable database of sacramental records from one hundred and fifty Boston-area parishes, dating between 1789 and 1900. The project will take several years to complete. However, while our transcribers work to create a name-searchable database, scanned images of parish records are available now in a browsable format for members and guest members alike. Additional parish records will be added as the volumes are scanned. To find out more about browsing parish images, watch this video.</p>
         </div>
       </div>
       <div class="seperator"></div>
@@ -2076,13 +2076,13 @@
         <div class="col-md-3 col-xs-6">
           <a href="#">
               <div class="imgWrap"><img class="rel-image" src="images/education.jpg" alt=""></div>
-            <p class="rel-caption">Access free materials about finding ancestors</p>
+            <p class="rel-caption">Access free materials on family history</p>
           </a>
         </div>
         <div class="col-md-3 col-xs-6">
           <a href="#">
               <div class="imgWrap"><img class="rel-image" src="images/publications.jpg" alt=""></div>
-            <p class="rel-caption">Find books on every family history topic</p>
+            <p class="rel-caption">Find books on genealogy topics</p>
           </a>
         </div>
         <div class="col-md-3 col-xs-6">
